# queue

./: .gitignore  .gitmodules  LICENSE  README.md  Taskfile.yaml  docker-compose.yaml
.github/workflows/: build-and-push.yaml
backend/: Cargo.toml  Dockerfile  build.rs
backend/src/: api.rs  main.rs  service.rs
backend/src/api/: middleware.rs  queue.rs
backend/src/user/: user.rs
deploy/base/: artifact.yaml  backend.yaml  kustomization.yaml  ui.yaml
deploy/overlays/prod/: config.yaml  kustomization.yaml  route.yaml  security.yaml  service.yaml
deploy/overlays/stg/: backend.yaml  config.yaml  gateway.yaml  instrumentation.yaml  kustomization.yaml  mcp.yaml  route.yaml  security.yaml  service.yaml  ui.yaml
gateway/: Dockerfile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  main.go
infra/: .terraform.lock.hcl  backend.tf  backend.tftpl  main.tf  openai.tf  variables.tf
mcp/: Dockerfile  main.py  pyproject.toml
mcp/src/: config.py  tools.py
proto/: queue_service.proto
service/: Dockerfile  main.py  pyproject.toml
service/src/: api.py  context.py  worker.py
service/src/config/: __init__.py  config.py
service/src/context/: request.py
service/src/routes/: messages.py  user.py
service/src/schema/: conversation.py  openai.py
service/src/workflows/: conversation.py
ui/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
ui/public/: config.json
ui/src/: main.tsx
ui/src/app/: index.tsx  layout.tsx  provider.tsx
ui/src/config/: index.ts
ui/src/features/chat/api/: index.ts
ui/src/features/chat/components/: chat-grid.tsx  chat-message.tsx  chat-panel.tsx
ui/src/features/chat/hooks/: use-chat.ts
ui/src/features/chat/types/: index.ts
ui/src/features/queue/api/: index.ts
ui/src/features/queue/components/: queue-card.tsx
ui/src/features/queue/hooks/: use-queue.ts
ui/src/features/queue/types/: index.ts
ui/src/features/theme/components/: toggle.tsx
ui/src/features/theme/hooks/: use-theme.ts
ui/src/features/theme/stores/: theme.ts
ui/src/features/user/api/: index.ts
ui/src/features/user/hooks/: use-user.ts
ui/src/features/user/types/: index.ts
