[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
envy = "0.4.2"
log = "0.4.27"
prost = "0.14.1"
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.1"
tonic-prost = "0.14.1"
tonic-reflection = "0.14.1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
