[project]
name = "mcp-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.3",
    "googleapis-common-protos>=1.70.0",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]
