[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "openai>=1.99.9",
    "openai-agents>=0.2.8",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "temporalio[openai-agents,opentelemetry]>=1.15.0",
    "uvicorn[standard]>=0.35.0",
]
