[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.0",
    "fastapi[standard]>=0.116.1",
    "googleapis-common-protos>=1.72.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.76.0",
    "loguru>=0.7.3",
    "openai>=1.99.9",
    "openai-agents>=0.2.8",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "temporalio[openai-agents,opentelemetry]>=1.18.0",
    "uvicorn[standard]>=0.35.0",
]
